# age_detector

./: README.md  pyproject.toml  stream_main.py
streamlit/: age_tool.py
streamlit_dash/: age_tool.py  age_toolv.py
streamlit_dash/model2/: final_tb_model_weights.h5  model_final_tb.json
